# MyApp

./: .gitignore  CMakeLists.txt  README.md
TinyTsTranslate/: BaiduTransfer.cpp  BaiduTransfer.h  TinyTsTranslate.cpp  TinyTsTranslate.h  TinyTsTranslate.qrc  TinyTsTranslate.ui  Translate.cpp  Translate.h  main.cpp  util.cpp  util.h
